--- a/Helper/Settings.settings
+++ b/Helper/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="LastProjectFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MainWindowSize" Type="System.Windows.Size" Scope="User">
+      <Value Profile="(Default)">0,0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
