--- a/Helper/Settings.settings
+++ b/Helper/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="MainWindowSize" Type="System.Windows.Size" Scope="User">
       <Value Profile="(Default)">0,0</Value>
     </Setting>
+    <Setting Name="LastCheckerAvailable" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
