--- a/Helper/Settings.settings
+++ b/Helper/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="LastCheckerAvailable" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Password" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
