--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -8,12 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Helper.Checkers\Helper.Checkers.csproj" />
     <ProjectReference Include="..\Helper.Jobs\Helper.Jobs.csproj" />
+    <ProjectReference Include="..\Helper.Models\Helper.Models.csproj" />
     <ProjectReference Include="..\Helper.Utils\Helper.Utils.csproj" />
   </ItemGroup>
 
